// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TowerDiskDragLayer snapshot matches snapshot with sourceClientOffset 1`] = `
<DocumentFragment>
  <div
    class="disk-drag-layer"
    style="pointer-events: none; position: fixed; z-index: 10; left: 0px; top: 0px; width: 100%; height: 100%;"
  >
    <div
      class="disk dragging-preview"
      style="height: 150px; width: 300px; transform: translate(25px, 75px);"
    >
      <img
        alt="alt-text"
        class="disk-image"
        src=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`TowerDiskDragLayer snapshot matches snapshot without sourceClientOffset 1`] = `
<DocumentFragment>
  <div
    class="disk-drag-layer"
    style="pointer-events: none; position: fixed; z-index: 10; left: 0px; top: 0px; width: 100%; height: 100%;"
  >
    <div
      class="disk dragging-preview"
      style="display: none;"
    >
      <img
        alt="alt-text"
        class="disk-image"
        src=""
      />
    </div>
  </div>
</DocumentFragment>
`;
